--- a/Labo 3/Opdracht peronal homepage/Personal homepage_uitbreiding.html
+++ b/Labo 3/Opdracht peronal homepage/Personal homepage_uitbreiding.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Gaute Lauwers</h1>
-<img src="Foto%20mezelf.jpg" height="100" width="100">
+<img src="Foto%20mezelf.jpg" alt="mezelf" height="100" width="100">
 
 <h2>Persoonlijke informatie</h2>
 <ol>
@@ -44,7 +44,7 @@
   <li>AJR
     <ul>
       <li>Link: <a href="https://nl.wikipedia.org/wiki/AJR_(band)">AJR</a>
-        <img src="AJR.jpg" height="75" width="75" ></li>
+        <img src="AJR.jpg" alt="AJR" height="75" width="75" ></li>
     </ul>
   </li>
 </ol>
@@ -53,7 +53,7 @@
   <li>Real Steel
     <ul>
       <li>Link: <a href="https://www.imdb.com/title/tt0433035/">Real steel</a>
-        <img src="real%20steel.jfif" height="100" width="75" ></li>
+        <img src="real%20steel.jfif" alt="real_steel" height="100" width="75" ></li>
     </ul>
   </li>
 </ol>
