--- a/Labo 3/Opdracht peronal homepage/Personal homepage_uitbreiding.html
+++ b/Labo 3/Opdracht peronal homepage/Personal homepage_uitbreiding.html
@@ -11,8 +11,8 @@
 <h2>Persoonlijke informatie</h2>
 <ol>
   <li>Naam: Gaute Lauwers</li>
-  <li>Adres: Jolainstraat 59, 8554 Sint-Denijs</li>
-  <li>Telefoonnummer: +32 479 47 60 65</li>
+  <li>Adres: Doorniksesteenweg 145, 8500 Kortrijk</li>
+  <li>Telefoonnummer: +32 056 26 41 60</li>
   <li>Email adres: <a href="mailto:gaute.lauwers@student.vives.be">gaute.lauwers@student.vives.be</a></li>
 </ol>
 <h2>Hobby's</h2>
