--- a/Labo 3/Opdracht peronal homepage/Personal homepage.html
+++ b/Labo 3/Opdracht peronal homepage/Personal homepage.html
@@ -7,6 +7,9 @@
 <body>
 <h1>Gaute Lauwers</h1>
 <img src="Foto%20mezelf.jpg" height="100" width="100">
+<br>
+<a href="Hobby's.html">Hobby's</a>
+<a href="Likes.html">Likes</a>
 
 <h2>Persoonlijke informatie</h2>
 <ol>
@@ -14,48 +17,6 @@
   <li>Adres: Doorniksesteenweg 145, 8500 Kortrijk</li>
   <li>Telefoonnummer: +32 056 26 41 60</li>
   <li>Email adres: <a href="mailto:gaute.lauwers@student.vives.be">gaute.lauwers@student.vives.be</a></li>
-</ol>
-<h2>Hobby's</h2>
-<ol>
-  <li>Gamen
-    <ul>
-      <li>Gamen is elektronische spelen spelen op een computer , console of een portable devices.
-      </li>
-      <li>Link: <a href="https://nl.wikipedia.org/wiki/Computerspel#Beschrijving">Gamen</a></li>
-    </ul>
-  </li>
-  <li>Eten
-    <ul>
-      <li>Het consumeren van voedsel voor energie te krijgen </li>
-      <li>Link: <a href="https://nl.wikipedia.org/wiki/Eten">Eten</a></li>
-    </ul>
-  </li>
-  <li>Werken
-    <ul>
-      <li> werken is hetgene dat ik doe voor geld te verdienen zodat ik leuke dingen kan doen.
-      </li>
-      <li>Link: <a href="https://nl.wikipedia.org/wiki/Werken_(arbeid)">Werken</a></li>
-    </ul>
-  </li>
-</ol>
-<h2>Vind-ik-leuk</h2>
-<h3>Band</h3>
-<ol>
-  <li>AJR
-    <ul>
-      <li>Link: <a href="https://nl.wikipedia.org/wiki/AJR_(band)">AJR</a>
-        <img src="AJR.jpg" height="75" width="75" ></li>
-    </ul>
-  </li>
-</ol>
-<h3>Film</h3>
-<ol>
-  <li>Real Steel
-    <ul>
-      <li>Link: <a href="https://www.imdb.com/title/tt0433035/">Real steel</a>
-        <img src="real%20steel.jfif" height="100" width="75" ></li>
-    </ul>
-  </li>
 </ol>
 </body>
 </html>
