--- a/Labo 4/index.html
+++ b/Labo 4/index.html
@@ -10,9 +10,9 @@
 <p>Resize the browser window to load different images.</p>
 
 <picture>
-    <source media="(min-width:650px)" srcset="images/img_pink_flowers.jpg">
-    <source media="(min-width:465px)" srcset="images/img_white_flower.jpg">
-    <img src="images/img_orange_flowers.jpg" alt="Flowers">
+    <source media="(min-width:650px)" srcset="Picture/images/img_pink_flowers.jpg">
+    <source media="(min-width:465px)" srcset="Picture/images/img_white_flower.jpg">
+    <img src="Picture/images/img_orange_flowers.jpg" alt="Flowers">
 </picture>
 
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/picture?retiredLocale=nl -->
